--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -446,6 +446,10 @@ footer .nav-logo img{
         transform: translateY(-8px) rotate(-45deg);
     }
 
+    .no-scroll {
+        overflow: hidden;
+    }
+
     .menu{
         left:-120%;
         top:100px;
