--- a/css/product.css
+++ b/css/product.css
@@ -271,6 +271,10 @@ footer .nav-logo img{
         position: relative;
     }
 
+    .no-scroll {
+        overflow: hidden;
+    }
+
     .ham-menu{
         display: block;
         position: absolute;
