--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -80,6 +80,7 @@
     margin: auto;
     width:95%;
     height: 49px;
+    min-width: 100px;
 }
 
 #menu-button:hover{
@@ -118,7 +119,8 @@
     color: #000;
     position: relative;
     z-index: 4;
-    margin-right: 250px;
+    min-width: 250px;
+    min-height: 30px;
 }
 
 .ham-menu{
@@ -309,7 +311,7 @@
 
 .imgbox #side{
     top: -20px;
-    left: 390px;
+    left: 94%;
 }
 
 .fourth{
@@ -398,10 +400,320 @@ footer .nav-logo img{
     height: 50px;
 }
 
+@media(max-width: 768px){
+    .txt-light{
+        color: #ffffff;
+    }
+
+    #top-logo{
+        border-radius: 40px;
+    }
+
+    .navbar-inner{
+        width:90%;
+    }
+
+
+    .navbar-inner #top-logo{
+        width:30%;
+        margin-right: 0;
+    }
+
+    #top-logo .logo{
+        width: 80%;
+        margin: auto;
+    }
+    
+    .nav-menu{
+        position: relative;
+    }
+
+    .ham-menu{
+        display: block;
+        position: absolute;
+        top:-20px;
+        right:10px;
+        z-index: 7;
+    }
+
+    .ham-menu.active .bar:nth-child(2){
+        opacity: 0;
+    }
+
+    .ham-menu.active .bar:nth-child(2){
+        opacity: 0;
+    }
+
+    .ham-menu.active .bar:nth-child(1){
+        transform: translateY(8px) rotate(45deg);
+    }
+
+    .ham-menu.active .bar:nth-child(3){
+        transform: translateY(-8px) rotate(-45deg);
+    }
+
+    .no-scroll {
+        overflow: hidden;
+    }
+
+    .menu{
+        left:-120%;
+        top:100px;
+        gap: 0;
+        height: 100vh;
+        background-color:#304147;
+        width: 100%;
+        text-align: center;
+        transition: 0.3s;
+        position: absolute;
+        z-index: 7;
+
+    }
+
+    .border-sm{
+        border-bottom: 1px solid #ddd;
+        padding-bottom: 15px;
+    }
+
+    .nav-bar{
+        flex-direction: column;
+        align-self: flex-start;
+        justify-content: center;
+        padding: 30px 0;
+        background-color: transparent;
+        width:100%;
+        
+    }
+
+    .nav-item{
+        margin:16px 0;
+        
+    }
+
+    .menu.active{
+        left:6%;
+    }
+
+    .button-box{
+        display: none;
+    }
+
+    .maincontainer{
+        height:250px;
+    }
+
+    .circle1{
+        height:250px;
+        width:250px;
+    
+    }
+
+    #right{
+        top:450px;
+        left:350px
+    }
+
+    .content{
+        margin: 20px auto;
+    }
+
+    #mar{
+        margin:50px auto;
+    }
+
+    .custom-size{
+        text-align: center;
+        font-size: 31px;
+        margin:0 auto 20px auto;
+        z-index: 4;
+        position: relative;
+    }
+
+    .parag{
+        margin-top: 20px;
+    }
+
+    .textbox{
+        width: 90%;
+        margin: auto;
+        padding-top: 0;
+    }
+    
+    .m-small{
+        margin: 0 auto 15px auto;
+    }
+
+    button{
+        width:200px;
+        height: auto;
+        padding: 5px;
+        margin: auto;
+    }
+
+    .textbox h1{
+        font-size: 40px;
+    }
+
+    .textbox a{
+        font-size: 16px;
+    }
+
+    .container{
+        position: relative;
+        overflow: hidden;
+    }
+
+    .container .card-img-top{
+        width:150px;
+        height: 150px;
+        margin:auto 30px;
+
+    }
+
+    .container h5{
+        font-size: 18px;
+    }
+
+    .container p{
+        font-size: 12px;
+        text-align: justify;
+    }
+
+    .text-container{
+        height: auto;
+    }
+
+    .text-container p{
+        font-size: 15px;
+    }
+
+    .text-center{
+        font-size: 18px;
+    }
+
+    .third{
+        height:1300px;
+    }
+
+    .img-txt{
+        display: flex;
+    }
+
+    .smallboxes{
+        width:100%;
+
+    }
+
+    .imgbox #side{
+        top: -20px;
+        left: 94%;
+    }
+
+    .imgbox{
+        margin-top: 50px;
+        width:100%;
+        height: 390px;
+        margin: auto;
+
+    }
+
+    .smallboxes .boxes{
+        width: 100%;
+        height: 180px;
+        margin-bottom: 20px;
+    }
+
+    .smallboxes .boxes h5{
+        font-size: 17px;
+    }
+    
+
+    .smallboxes .boxes p{
+        font-size: 14px;
+    }
+
+    .img-txt{
+        display: block;
+    }
+
+    .fourth{
+        height:350px;
+        padding: 20px;
+    }
+
+    .fourth h5{
+        font-size: 19px;
+        width:80%;
+        margin:auto;    
+    }
+
+    .text1{
+        width: 100%;
+        margin-bottom: 30px;
+    }
+
+    .fourth p{
+        font-size: 14px;
+        width:80%;
+        margin:auto;
+        line-height: 30px;
+    }
+
+    .five{
+        width:90%;
+        height:760px;
+    }
+
+    .five h4{
+        margin-top: 0;
+    }
+
+    .five .boxes{
+        display: block;
+    }
+
+    .five .boxes .text{
+        width:100%;
+        height: auto;
+        border-right: none;
+        border-bottom: 1px solid #1fb7fb;
+        margin: 0;
+    }
+
+    .five .boxes p{
+        font-size: 14px;
+    }
+
+    .five .boxes h4{
+        font-size: 17px;
+    }
+
+    footer .nav-logo{
+        width:100%;
+        height:100px;
+    }
+    
+    footer .nav-logo .logo{
+        width:40%;
+        height:40px;
+    }
+    
+    footer .nav-logo p{
+        font-size: 12px;
+        width:40%;
+        margin: auto;
+    }
+    
+}
+
 @media (max-width: 576px){
     
     .txt-light{
         color: #ffffff;
+    }
+
+    #top-logo{
+        border-radius: 35px;
     }
 
     .navbar-inner{
@@ -487,7 +799,7 @@ footer .nav-logo img{
     }
 
     .menu.active{
-        left:5%;
+        left:6%;
     }
 
     .button-box{
