--- a/css/product.css
+++ b/css/product.css
@@ -80,6 +80,7 @@
     margin: auto;
     width:95%;
     height: 49px;
+    min-width: 100px;
 }
 
 #menu-button:hover{
@@ -118,7 +119,8 @@
     color: #000;
     position: relative;
     z-index: 4;
-    margin-right: 250px;
+    min-width: 250px;
+    min-height: 30px;
 }
 
 .ham-menu{
@@ -245,6 +247,198 @@ footer .nav-logo img{
     height: 50px;
 }
 
+@media (max-width: 768px){
+    .txt-light{
+        color: #ffffff;
+    }
+
+    .navbar-inner{
+        width:90%;
+    }
+
+   
+
+    .navbar-inner #top-logo{
+        width:30%;
+        margin-right: 0;
+    }
+
+    #top-logo .logo{
+        width: 80%;
+        margin: auto;
+    }
+    
+    .nav-menu{
+        position: relative;
+    }
+
+    .no-scroll {
+        overflow: hidden;
+    }
+
+    .ham-menu{
+        display: block;
+        position: absolute;
+        top:-20px;
+        right:10px;
+        z-index: 7;
+    }
+
+    .ham-menu.active .bar:nth-child(2){
+        opacity: 0;
+    }
+
+    .ham-menu.active .bar:nth-child(2){
+        opacity: 0;
+    }
+
+    .ham-menu.active .bar:nth-child(1){
+        transform: translateY(8px) rotate(45deg);
+    }
+
+    .ham-menu.active .bar:nth-child(3){
+        transform: translateY(-8px) rotate(-45deg);
+    }
+
+    .menu{
+        position: fixed;
+        left:-120%;
+        top:100px;
+        gap: 0;
+        height: 100vh;
+        background-color: #304147;
+        width: 100%;
+        text-align: center;
+        transition: 0.3s;
+        position: absolute;
+        z-index: 10;
+
+    }
+
+    .border-sm{
+        border-bottom: 1px solid #ddd;
+        padding-bottom: 15px;
+    }
+
+    .nav-bar{
+        flex-direction: column;
+        align-self: flex-start;
+        justify-content: center;
+        padding: 30px 40px;
+        background-color: transparent;
+        width:100%;
+        
+    }
+
+    .nav-item{
+        margin:16px 0;
+        
+    }
+
+    .menu.active{
+        left:6%;
+    }
+
+    .button-box{
+        display: none;
+    }
+
+    .maincontainer{
+        height:300px
+    }
+
+    .circle1{
+        height:250px;
+        width:250px;
+    
+    }
+
+    #right{
+        top:450px;
+        left:350px
+    }
+
+    .content{
+        margin: 20px auto;
+    }
+
+    .custom-size{
+        text-align: center;
+        font-size: 31px;
+        margin:0 auto 20px auto;
+        z-index: 4;
+        position: relative;
+    }
+
+    .parag{
+        margin-top: 20px;
+    }
+
+    .textbox{
+        width: 90%;
+        margin: auto;
+        padding-top: 0;
+    }
+    
+    .m-small{
+        margin: 0 auto 15px auto;
+    }
+
+    button{
+        width:200px;
+        height: auto;
+        padding: 5px;
+        margin: auto;
+    }
+
+    .textbox h1{
+        font-size: 40px;
+    }
+
+    .textbox a{
+        font-size: 16px;
+    }
+
+    .container{
+        position: relative;
+        overflow: hidden;
+    }
+
+    .container .card-img-top{
+        width:150px;
+        height: 150px;
+        margin:auto 30px;
+
+    }
+
+
+   
+
+    .container h5{
+        font-size: 18px;
+    }
+
+    .container p{
+        font-size: 12px;
+        text-align: justify;
+    }
+
+    footer .nav-logo{
+        width:100%;
+        height:100px;
+    }
+    
+    footer .nav-logo .logo{
+        width:10%;
+        height:40px;
+    }
+    
+    footer .nav-logo p{
+        font-size: 12px;
+    }
+
+}
+
 
 
 @media (max-width: 576px){
@@ -337,7 +531,7 @@ footer .nav-logo img{
     }
 
     .menu.active{
-        left:5%;
+        left:6%;
     }
 
     .button-box{
