--- a/css/contact.css
+++ b/css/contact.css
@@ -262,6 +262,10 @@ input[type=text], input[type=email]{
     margin-bottom: 25px;
 }
 
+input[type=text]:focus, input[type=email]:focus, textarea:focus{
+   border: 1px solid #00ADEF;
+}
+
 input[type=button]{
     padding:15px 18px;
     color: #ffffff;
@@ -500,6 +504,14 @@ footer .nav-logo img{
 
     .button-box{
         display: none;
+        width: 120px;
+    }
+
+    .button-box.active{
+        display: block;
+        position: absolute;
+        top:25%;
+        left:35%;
     }
 
     .maincontainer{
@@ -756,6 +768,14 @@ footer .nav-logo img{
 
     .button-box{
         display: none;
+        width: 120px;
+    }
+
+    .button-box.active{
+        display: block;
+        position: absolute;
+        top:25%;
+        left:35%;
     }
 
     .maincontainer{
@@ -879,7 +899,7 @@ footer .nav-logo img{
     }
 
     .no{
-        width:70%;
+        width:85%;
     }
 
     .no #numberDiv1, #numberDiv2, #numberDiv3{
@@ -900,19 +920,20 @@ footer .nav-logo img{
     }
 
     footer .nav-logo{
-        width:300px;
+        width:60%;
         height:100px;
         display: block;
+        margin: auto;
     }
     
     footer .nav-logo .logo{
-        width:120px;
+        width:100%;
         height:40px;
     }
     
     footer .nav-logo p{
         font-size: 12px;
-        width:40%;
+        width:100%;
         margin: auto;
     }
 }
