--- a/css/product.css
+++ b/css/product.css
@@ -60,7 +60,7 @@
 .button-box{
     position: relative;
     z-index: 4;
-    width:10%;
+    width:14%;
     height: 70px;
     position: relative;
 }
@@ -341,6 +341,14 @@ footer .nav-logo img{
 
     .button-box{
         display: none;
+        width: 120px;
+    }
+
+    .button-box.active{
+        display: block;
+        position: absolute;
+        top:25%;
+        left:35%;
     }
 
     .maincontainer{
@@ -536,6 +544,14 @@ footer .nav-logo img{
 
     .button-box{
         display: none;
+        width: 120px;
+    }
+
+    .button-box.active{
+        display: block;
+        position: absolute;
+        top:25%;
+        left:35%;
     }
 
     .maincontainer{
@@ -606,9 +622,6 @@ footer .nav-logo img{
 
     }
 
-
-   
-
     .container h5{
         font-size: 18px;
     }
@@ -619,19 +632,22 @@ footer .nav-logo img{
     }
 
     footer .nav-logo{
-        width:100%;
+        width:60%;
         height:100px;
+        display: block;
+        margin: auto;
     }
     
     footer .nav-logo .logo{
-        width:10%;
+        width:100%;
         height:40px;
     }
     
     footer .nav-logo p{
         font-size: 12px;
+        width:100%;
+        margin: auto;
     }
-    
     
     
 
