--- a/css/product.css
+++ b/css/product.css
@@ -193,6 +193,91 @@
     color: #fff;
 }
 
+.content {
+    max-height: 70px; /* Set the maximum height to show initially */
+    overflow: hidden; /* Hide overflow */
+    transition: max-height 0.3s ease; /* Smooth transition */
+}
+
+
+.content.expanded {
+    max-height: 400px; /* Adjust this value to fit your needs */
+}
+
+.readMoreBtn{
+    color: #00ADEF;
+    background-color: transparent;
+    outline: 0;
+    border: 0;
+}
+
+.card .img{
+    width:300px;
+    height: 320px;
+    margin-top: 25px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    object-fit: contain;
+}
+
+.card #M16{
+    background-image: url("/asset/20.png");
+}
+
+.card #M17{
+    background-image: url("/asset/16.png");
+}
+
+.card #M18{
+    background-image: url("/asset/18.png");
+}
+
+.card #M19{
+    background-image: url("/asset/23.png");
+}
+
+.card #M20{
+    background-image: url("/asset/22.png");
+}
+
+.card #M21{
+    background-image: url("/asset/21.png");
+}
+
+.card #M22{
+    background-image: url("/asset/26.png");
+}
+
+.card #M23{
+    background-image: url("/asset/19.png");
+}
+
+.card #M24{
+    background-image: url("/asset/25.png");
+}
+
+.card #M25{
+    background-image: url("/asset/24.png");
+}
+
+.card #M26{
+    background-image: url("/asset/17.png");
+}
+
+.card #M27{
+    background-image: url("/asset/28.png");
+}
+
+.card #M28{
+    background-image: url("/asset/27.png");
+}
+
+
+.card #M29{
+    background-image: url("/asset/29.png");
+    background-size: contain;
+}
 
 .links .right{
     background-image: url("/asset/CaretDoubleRight.svg");
@@ -256,7 +341,21 @@ footer .nav-logo img{
         width:90%;
     }
 
-   
+    .card.img-top{
+        margin:auto;
+    }
+
+    .content {
+        max-height: 40px; /* Set the maximum height to show initially */
+        overflow: hidden; /* Hide overflow */
+        transition: max-height 0.3s ease; /* Smooth transition */
+    }
+
+    .readMoreBtn{
+        font-size: 12px;
+        width:40%;
+        margin: auto;
+    }
 
     .navbar-inner #top-logo{
         width:30%;
@@ -392,6 +491,14 @@ footer .nav-logo img{
         margin: 0 auto 15px auto;
     }
 
+    .card .img{
+        width:180px;
+        height:180px;
+        background-size: contain;
+        margin: 0 auto;
+        float: center;
+    }
+
     button{
         width:200px;
         height: auto;
@@ -419,9 +526,6 @@ footer .nav-logo img{
 
     }
 
-
-   
-
     .container h5{
         font-size: 18px;
     }
@@ -437,7 +541,7 @@ footer .nav-logo img{
     }
     
     footer .nav-logo .logo{
-        width:10%;
+        width:40%;
         height:40px;
     }
     
@@ -455,11 +559,26 @@ footer .nav-logo img{
         color: #ffffff;
     }
 
+    section .container{
+        padding: 0 30px;
+    }
+
     .navbar-inner{
         width:90%;
     }
 
-   
+    .readMoreBtn{
+        font-size: 12px;
+        width:80%;
+        margin: auto;
+    }
+
+    .card .img{
+        width:150px;
+        height:150px;
+        background-size: contain;
+        margin: 25px auto 0 auto;
+    }
 
     .navbar-inner #top-logo{
         width:30%;
@@ -624,11 +743,15 @@ footer .nav-logo img{
 
     .container h5{
         font-size: 18px;
+        text-align: center;
+        font-size: 16px;
+        width: 60%;
+        margin:auto; 
     }
 
     .container p{
         font-size: 12px;
-        text-align: justify;
+        text-align: left;
     }
 
     footer .nav-logo{
