--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ body {
     color: #00ADEF;
     margin: auto;
     height: 49px;
-    min-width: 130px;
+    min-width: 100px;
 }
 
 #menu-button:hover{
@@ -277,6 +277,31 @@ body {
     font-style: normal;
     font-weight: 600;
 }
+
+.container .row .card h1{
+    font-size: 54px;
+    color: #fff;
+}
+
+
+.container .row .card .content {
+    max-height: 40px; 
+    overflow: hidden; 
+    transition: max-height 0.3s ease;
+}
+
+
+.container .row .card .content.expanded {
+    max-height: 400px; 
+}
+
+.readMoreBtn{
+    color: #00ADEF;
+    background-color: transparent;
+    outline: 0;
+    border: 0;
+}
+
 
 .textcontainer p{
     width:80%;
@@ -1021,8 +1046,12 @@ footer .nav-logo p{
 }
 
 @media (max-width: 576px){
+    #menu-button{
+       width: 140px;
+    }
     .maincontainer{
         position: relative;
+        height:800px;
     }
 
     .txt-light{
@@ -1036,7 +1065,7 @@ footer .nav-logo p{
     .navbar-inner #top-logo{
         width:30%;
         margin-right: 0;
-        height:60px;
+        height:50px;
     }
 
     #top-logo .logo{
@@ -1128,18 +1157,13 @@ footer .nav-logo p{
         left:37%;
     }
 
-    .maincontainer{
-        height:850px
-    }
 
     .circle1{
-        height:250px;
-        width:250px;
-    
+       display: none;
     }
 
     #right{
-        top:450px;
+        display: none;
     }
 
     .content{
@@ -1186,13 +1210,14 @@ footer .nav-logo p{
     }
 
     #no2{
-        width: 250px;
-        height: 250px;
-        left:20%;
+        width: 230px;
+        height: 230px;
+        left:13%;
+        top:80px;
     }
 
     #no1{
-        left:10%;
+        left:4%;
     }
 
 
@@ -1395,11 +1420,12 @@ footer .nav-logo p{
 }
 
 .fourth .fluid-container{
+    margin: 20px auto;
     height: 300px;
 }
 
 .fourth .fluid-container h1{
-    font-size: 24px;
+    font-size: 20px;
     margin-top: 70px;
     width:85%;
     position: relative;
@@ -1407,7 +1433,7 @@ footer .nav-logo p{
 }
 
 .fourth .fluid-container p{
-    font-size: 18px;
+    font-size: 15px;
     width: 90%;
     position: relative;
     z-index: 3;
@@ -1418,13 +1444,13 @@ footer .nav-logo p{
     height: 70px;
 }
 
-#choose{
-    width:140px;
-    height:50px;
+.fourth .fluid-container #choose{
+    width:110px;
+    height:30px;
 }
 
-#choose span{
-    font-size: 16px;
+.fourth .fluid-container #choose span{
+    font-size: 13px;
 }
 
 footer .nav-logo{
